--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -256,11 +256,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9cf3e62341bd4183173a1159c47c02bb03d818f88413248385459adf80d3bee4"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -274,9 +271,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3a87034ddc980f8c7dacf4f04ce60f101892d78ac96acb39fe217284c49584f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
